Update translation files

--- a/doc/locale/fr/LC_MESSAGES/api/objects.po
+++ b/doc/locale/fr/LC_MESSAGES/api/objects.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-20 11:10+0200\n"
+"POT-Creation-Date: 2025-07-22 14:54+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Generated-By: Babel 2.17.0\n"
 
 msgid "Model classes for signals and images (:mod:`sigima.objects`)"
-msgstr ""Classes de modèle pour les signaux et les images (:mod:`sigima.objects`)"
+msgstr "\"Classes de modèle pour les signaux et les images (:mod:`sigima.objects`)"
 
 msgid "The :mod:`sigima.objects` module aims at providing all the necessary classes and functions to create and manipulate Sigima signal and image objects."
 msgstr "Le module :mod:`sigima.objects` vise à fournir toutes les classes et fonctions nécessaires pour créer et manipuler des objets signal et image de Sigima."
@@ -187,7 +187,7 @@ msgstr ""
 msgid "Signal object"
 msgstr ""
 
-msgid "Données\\.  Default: None."
+msgid "Default: None."
 msgstr ""
 
 msgid "type"
@@ -197,25 +197,22 @@ msgid "guidata.dataset.dataitems.FloatArrayItem"
 msgstr ""
 
 #, python-brace-format
-msgid "Métadonnées\\.  Default: {}."
+msgid "Default: {}."
 msgstr ""
 
 msgid "guidata.dataset.dataitems.DictItem"
 msgstr ""
 
-msgid "Chaîne\\. Default: ''."
+msgid "Default: ''."
 msgstr ""
 
 msgid "guidata.dataset.dataitems.StringItem"
 msgstr ""
 
-msgid "Titre du signal\\.  Chaîne\\. Default: 'Sans titre'."
+msgid "Signal title\\.  Default: 'Untitled'."
 msgstr ""
 
-msgid "Titre\\.  Chaîne\\. Default: ''."
-msgstr ""
-
-msgid "Unité\\.  Chaîne\\. Default: ''."
+msgid "Title\\.  Default: ''."
 msgstr ""
 
 msgid "Default: True."
@@ -227,13 +224,13 @@ msgstr ""
 msgid "Default: False."
 msgstr ""
 
-msgid "Borne inférieure\\.  Flottant\\. Default: None."
+msgid "Lower bound\\.  Default: None."
 msgstr ""
 
 msgid "guidata.dataset.dataitems.FloatItem"
 msgstr ""
 
-msgid "Borne supérieure\\.  Flottant\\. Default: None."
+msgid "Upper bound\\.  Default: None."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`SignalObj` with the fields set to the given values."
@@ -731,16 +728,16 @@ msgstr ""
 msgid "Parameters for zero signal"
 msgstr ""
 
-msgid "Titre\\.  Chaîne\\. Default: 'Signal sans titre'."
+msgid "Default: 'Untitled signal'."
 msgstr ""
 
-msgid "Flottant\\. Default: -10.0."
+msgid "Default: -10.0."
 msgstr ""
 
-msgid "Flottant\\. Default: 10.0."
+msgid "Default: 10.0."
 msgstr ""
 
-msgid "Taille\\. Nombre de points\\. Entier\\. Default: 500."
+msgid "Signal size (total number of points)\\. Default: 500."
 msgstr ""
 
 msgid "guidata.dataset.dataitems.IntItem"
@@ -755,13 +752,13 @@ msgstr ""
 msgid "Uniform-law random signal/image parameters"
 msgstr ""
 
-msgid "Graine\\.  Entier\\. Default: 1."
+msgid "Default: 1."
 msgstr ""
 
-msgid "V\\ :subscript:`min`\\. Borne inférieure de la distribution uniforme\\. Flottant\\. Default: -0.5."
+msgid "V\\ :subscript:`min`\\. Uniform distribution lower bound\\. Default: -0.5."
 msgstr ""
 
-msgid "V\\ :subscript:`max`\\. Borne supérieure de la distribution uniforme\\. Flottant\\. Default: 0.5."
+msgid "V\\ :subscript:`max`\\. Uniform distribution higher bound\\. Default: 0.5."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`UniformRandomParam` with the fields set to the given values."
@@ -773,10 +770,10 @@ msgstr ""
 msgid "Normal-law random signal/image parameters"
 msgstr ""
 
-msgid "μ\\. Moyenne de la distribution normale\\. Flottant\\. Default: 0.1."
+msgid "μ\\. Normal distribution mean\\. Default: 0.1."
 msgstr ""
 
-msgid "σ\\. Ecart-type de la distribution normale\\. Flottant\\. Default: 0.02."
+msgid "σ\\. Normal distribution standard deviation\\. Default: 0.02."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`NormalRandomParam` with the fields set to the given values."
@@ -788,16 +785,16 @@ msgstr ""
 msgid "Parameters for Gaussian function"
 msgstr ""
 
-msgid "Flottant\\. Default: 1.0."
+msgid "Default: 1.0."
 msgstr ""
 
-msgid "Flottant\\. Default: 0.0."
+msgid "Default: 0.0."
 msgstr ""
 
-msgid "σ\\.  Flottant\\. Default: 1.0."
+msgid "σ\\.  Default: 1.0."
 msgstr ""
 
-msgid "μ\\.  Flottant\\. Default: 0.0."
+msgid "μ\\.  Default: 0.0."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`GaussParam` with the fields set to the given values."
@@ -827,16 +824,16 @@ msgstr ""
 msgid "Parameters for sinus function"
 msgstr ""
 
-msgid "Fréquence\\.  Flottant\\. Default: 1.0."
+msgid "Frequency\\.  Default: 1.0."
 msgstr ""
 
-msgid "Unité\\.  Single choice from: FreqUnits.HZ, FreqUnits.KHZ, FreqUnits.MHZ, FreqUnits.GHZ. Default: FreqUnits.HZ."
+msgid "Single choice from: FreqUnits.HZ, FreqUnits.KHZ, FreqUnits.MHZ, FreqUnits.GHZ. Default: FreqUnits.HZ."
 msgstr ""
 
 msgid "guidata.dataset.dataitems.ChoiceItem"
 msgstr ""
 
-msgid "Flottant, unité : °\\. Default: 0.0."
+msgid "Float, unit: °\\. Default: 0.0."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`SinusParam` with the fields set to the given values."
@@ -902,9 +899,6 @@ msgstr ""
 msgid "Parameters for exponential function"
 msgstr ""
 
-msgid "Exposant\\.  Flottant\\. Default: 1.0."
-msgstr ""
-
 msgid "Returns a new instance of :py:class:`ExponentialParam` with the fields set to the given values."
 msgstr ""
 
@@ -914,13 +908,10 @@ msgstr ""
 msgid "Parameters for pulse function"
 msgstr ""
 
-msgid "Amplitude\\.  Flottant\\. Default: 1.0."
+msgid "Amplitude\\.  Default: 1.0."
 msgstr ""
 
-msgid "Démarrer\\.  Flottant\\. Default: 0.0."
-msgstr ""
-
-msgid "Fin\\.  Flottant\\. Default: 0.0."
+msgid "End\\.  Default: 0.0."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`PulseParam` with the fields set to the given values."
@@ -965,10 +956,10 @@ msgstr ""
 msgid "Signal ROI parameters"
 msgstr ""
 
-msgid "Coordonnée du premier point\\.  Flottant\\. Default: None."
+msgid "First point coordinate\\.  Default: None."
 msgstr ""
 
-msgid "Coordonnée du dernier point\\.  Flottant\\. Default: None."
+msgid "Last point coordinate\\.  Default: None."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`ROI1DParam` with the fields set to the given values."
@@ -1016,19 +1007,19 @@ msgstr ""
 msgid "Image object"
 msgstr ""
 
-msgid "X\\ :subscript:`0`\\.  Flottant\\. Default: 0.0."
+msgid "X\\ :subscript:`0`\\.  Default: 0.0."
 msgstr ""
 
-msgid "Y\\ :subscript:`0`\\.  Flottant\\. Default: 0.0."
+msgid "Y\\ :subscript:`0`\\.  Default: 0.0."
 msgstr ""
 
-msgid "Δx\\.  Flottant, non nul\\. Default: 1.0."
+msgid "Δx\\.  Float, non zero\\. Default: 1.0."
 msgstr ""
 
-msgid "Δy\\.  Flottant, non nul\\. Default: 1.0."
+msgid "Δy\\.  Float, non zero\\. Default: 1.0."
 msgstr ""
 
-msgid "Titre de l'image\\.  Chaîne\\. Default: 'Sans titre'."
+msgid "Image title\\.  Default: 'Untitled'."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`ImageObj` with the fields set to the given values."
@@ -1145,16 +1136,16 @@ msgstr ""
 msgid "Image parameters for a 2D image filled with zeros"
 msgstr ""
 
-msgid "Titre\\.  Chaîne\\. Default: 'Image sans titre'."
+msgid "Default: 'Untitled image'."
 msgstr ""
 
-msgid "Hauteur\\. Hauteur de l'image : nombre de lignes\\. Entier\\. Default: 1024."
+msgid "Image height: number of rows\\. Default: 1024."
 msgstr ""
 
-msgid "Largeur\\. Largeur de l'image : nombre de colonnes\\. Entier\\. Default: 1024."
+msgid "Image width: number of columns\\. Default: 1024."
 msgstr ""
 
-msgid "Type de données\\.  Single choice from: ImageDatatypes.UINT8, ImageDatatypes.UINT16, ImageDatatypes.INT16, ImageDatatypes.FLOAT32, ImageDatatypes.FLOAT64. Default: ImageDatatypes.UINT8."
+msgid "Data type\\.  Single choice from: ImageDatatypes.UINT8, ImageDatatypes.UINT16, ImageDatatypes.INT16, ImageDatatypes.FLOAT32, ImageDatatypes.FLOAT64. Default: ImageDatatypes.UINT8."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`Zeros2DParam` with the fields set to the given values."
@@ -1193,16 +1184,16 @@ msgstr ""
 msgid "2D Gaussian parameters"
 msgstr ""
 
-msgid "Norm\\.  Flottant\\. Default: None."
+msgid "Norm\\.  Default: None."
 msgstr ""
 
-msgid "Flottant\\. Default: -10."
+msgid "Default: -10."
 msgstr ""
 
-msgid "Flottant\\. Default: 10."
+msgid "Default: 10."
 msgstr ""
 
-msgid "Flottant\\. Default: 0."
+msgid "Default: 0."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`Gauss2DParam` with the fields set to the given values."
@@ -1217,22 +1208,22 @@ msgstr ""
 msgid "z = a (x - x<sub>0</sub>) + b (y - y<sub>0</sub>) + c"
 msgstr ""
 
-msgid "x\\ :subscript:`0`\\.  Flottant\\. Default: 0.0."
+msgid "x\\ :subscript:`0`\\.  Default: 0.0."
 msgstr ""
 
-msgid "y\\ :subscript:`0`\\.  Flottant\\. Default: 0.0."
+msgid "y\\ :subscript:`0`\\.  Default: 0.0."
 msgstr ""
 
-msgid "x\\ :subscript:`min`\\.  Flottant\\. Default: -1.0."
+msgid "x\\ :subscript:`min`\\.  Default: -1.0."
 msgstr ""
 
-msgid "x\\ :subscript:`max`\\.  Flottant\\. Default: 1.0."
+msgid "x\\ :subscript:`max`\\.  Default: 1.0."
 msgstr ""
 
-msgid "y\\ :subscript:`min`\\.  Flottant\\. Default: -1.0."
+msgid "y\\ :subscript:`min`\\.  Default: -1.0."
 msgstr ""
 
-msgid "y\\ :subscript:`max`\\.  Flottant\\. Default: 1.0."
+msgid "y\\ :subscript:`max`\\.  Default: 1.0."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`Ramp2DParam` with the fields set to the given values."
@@ -1244,31 +1235,31 @@ msgstr ""
 msgid "Image ROI parameters"
 msgstr ""
 
-msgid "Géométrie\\.  Single choice from: 'rectangle', 'circle', 'polygon'. Default: 'rectangle'."
+msgid "Single choice from: 'rectangle', 'circle', 'polygon'. Default: 'rectangle'."
 msgstr ""
 
-msgid "X\\ :subscript:`0`\\.  Entier, unité : pixels\\. Default: None."
+msgid "X\\ :subscript:`0`\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "Y\\ :subscript:`0`\\.  Entier, unité : pixels\\. Default: None."
+msgid "Y\\ :subscript:`0`\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "ΔX\\.  Entier, unité : pixels\\. Default: None."
+msgid "ΔX\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "ΔY\\.  Entier, unité : pixels\\. Default: None."
+msgid "ΔY\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "X\\ :subscript:`C`\\.  Entier, unité : pixels\\. Default: None."
+msgid "X\\ :subscript:`C`\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "Y\\ :subscript:`C`\\.  Entier, unité : pixels\\. Default: None."
+msgid "Y\\ :subscript:`C`\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "Rayon\\.  Entier, unité : pixels\\. Default: None."
+msgid "Radius\\.  Integer, unit: pixels\\. Default: None."
 msgstr ""
 
-msgid "Coordonnées (pixels)\\.  Default: None."
+msgid "Coordinates (pixels)\\.  Default: None."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`ROI2DParam` with the fields set to the given values."
@@ -1324,3 +1315,4 @@ msgstr ""
 
 msgid "Float number stored with 64 bits"
 msgstr ""
+
